Fix z-index sélecteur multiple

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -247,7 +247,7 @@ td div.bootstrap-select {
 .bootstrap-select > div.dropdown-menu {
   width: 100%;
   min-width: 100% !important;
-  z-index: 812;
+  z-index: 1030;
   a {
     padding-left: 8px;
     padding-right: 8px;
